# template-python-cli

./: .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  README.rst  Taskfile.yml  package-lock.json  package.json  package.json.liquid  pnpm-lock.yaml  project.json  pyproject.toml  pyproject.toml.liquid
.config/: common-keywords.json  eslintcache  package-lock.json  variables.json
.config/brew/: binary.rb  python.rb
.config/docs/: blueprint-contributing.md  blueprint-readme-cli.md  common.json  package.json  pyproject.toml  variables.json
.config/docs/contributing/: code-of-conduct.md  pull-requests.md
.config/docs/readme/: contributing-details.md  header.md  license.md  quick-description.md  requirements.md  subheader.md
.devcontainer/: devcontainer.json
.pnpm-store/v3/files/00/: a71d4e71525804dde7f1823d1c6bd82870209f3909ecab1328d11e52b1439e9de1724c1b29b4b8088a9f4c5b2ce18e977fb24693938b8f38755084739014cd-index.json  aa5a6251e7f2de1255b3870b2f9be7e28a82f478bebb03f2f6efadb890269b3b7ca0d3923903af2ea38b4ad42630b49336cd78f2f0cf1abc8b2a68e35a9e58-index.json  c09991ff32b4b26a048862558750dd2882d9384d6218ce528f00842353efcb02be2b3d2071ed7bac27ceb09ee37fea8f8a15c203360268d0081b5ca600aaaf-index.json  e22049009ea62258c0fdc04671b1fb95674eed870587736c63f8e5e2f0d6faf7cc1def64b7b279dd6c0bd8676dc39cf7f4ab33233944f42b906cf8692f59a3-index.json
.pnpm-store/v3/github.com+glayzzle+php-parser@27abcb2337ac6450c068ef064982dfabf77916a5/: integrity.json
docs/: CONTRIBUTING.md  conf.py  index.rst
docs/partials/: guide.md
local/: install.sh  package-lock.json
local/slim/: exe.txt  install.txt
python-cli/cli/: fire.py
python_cli/: cli.py
src/cli/: click.py
src/unix/: sh.py
src/validations/: schema.py
template/: .dockerignore  .gitignore  Dockerfile  Dockerfile.Poetry  README.md  README.rst  Taskfile.yml  docker-compose.yml  package.json  pyproject.toml  run.py  tox.ini
template/tests/: test_{{Name}}.py
template/{{Name}}/: cli.py  cli_fire.py
template/{{Name}}/cli/: click.py  fire.py
(+909 files in other folders)
