[tool.poetry]
name = "python-cli"
version = "0.1.0"
description = ""
authors = ["Renny Montero <rennym19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "4.1.2"
sphinx-press-theme = "^0.8.0"
rich = "^10.7.0"
click = "^8.0.1"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
