[tool.poetry]
name = "python-cli"
version = "0.1.0"
description = ""
authors = ["Renny Montero <rennym19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "4.1.2"
sphinx-press-theme = "^0.8.0"
rich = "^10.7.0"
fire = "^0.4.0"
flake8 = "^3.9.2"
pylint = "^2.10.2"
bandit = "^1.7.0"
PySnooper = "^0.5.0"
requests = "^2.26.0"
aiohttp = "^3.7.4"
schema = "^0.7.4"
celery = "^5.1.2"
click = "7.1.2"
pyinstrument = "^4.0.3"
pyoxidizer = "^0.17.0"
arrow = "^1.1.1"
better-exceptions = "^0.3.3"
sh = "^1.14.2"
schedule = "^1.1.0"
furl = "^2.1.2"
black = "^21.7b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
