[tool.poetry]
name = "{{Name}}"
version = "{{Version}}"
description = "{{Description}}"
authors = ["{{Author}} <{{Email}}>"]
license = "{{License}}"

[tool.poetry.dependencies]
python = ">=3.6,<3.11"
arrow = "^1.1.1"
Sphinx = "^4.1.2"
sphinx-press-theme = "^0.8.0"
rich = "^10.9.0"
fire = "^0.4.0"
requests = "^2.26.0"
aiohttp = "^3.7.4"
schema = "^0.7.4"
click = "^7.0"
celery = "^5.1.2"
better-exceptions = "^0.3.3"
sh = "^1.14.2"
schedule = "^1.1.0"
furl = "^2.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pylint = "^2.10.2"
bandit = "^1.7.0"
PySnooper = "^1.0.0"
pyinstrument = "^4.0.3"
black = "^21.8b0"
pytest = "^6.2.5"
pyinstaller = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
